# robotsix-config

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENT.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  codecov.yml  mkdocs.yml  pyproject.toml  release-please-config.json  renovate.json  vulture_whitelist.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/actions/setup/: action.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  deps-bump.yml  docs.yml  lint-workflows.yml  release.yml  scorecard.yml
.robotsix-mill/: config.yaml
.robotsix-mill/periodic/: audit.yaml  bc_check.yaml  board_cleanup.yaml  completeness_check.yaml  copy_paste.yaml  test_gap.yaml  triage_boilerplate.yaml
changelog.d/: 20260703T144842Z-add-security-auto-release-and-baseline-c-43ea.misc.md  20260703T144842Z-set-up-towncrier-for-changelog-managemen-4153.misc.md  20260703T145533Z-add-actionlint-to-ci-workflow-for-workfl-f503.misc.md  20260703T145533Z-upgrade-actions-dependency-review-action-6a45.misc.md  20260703T150728Z-ci-add-json-schema-freshness-check-to-ke-da39.misc.md  20260703T203034Z-enable-changelog-autofill-periodic-workf-0655.misc.md  20260704T080208Z-add-codeql-yml-using-shared-reusable-to-78a5.misc.md  20260704T080208Z-add-lint-workflows-yml-using-shared-reus-37ec.misc.md  20260704T080208Z-migrate-robotsix-config-docs-yml-to-shar-ac7b.misc.md  20260704T081334Z-remove-inline-codeql-sast-job-from-ci-ym-23d6.misc.md  20260704T082204Z-ci-fix-out-of-scope-ci-failure-lint-zizm-ba03.misc.md  20260704T083042Z-ci-fix-address-zizmor-excessive-permissi-23eb.misc.md  20260704T085008Z-ci-fix-out-of-scope-ci-failure-lint-zizm-ae0e.misc.md  20260704T135836Z-missing-vulture-whitelist-py-breaks-pre-5801.misc.md  20260704T141322Z-docs-yml-references-nonexistent-extra-do-9448.misc.md  20260704T141322Z-readme-md-and-docs-index-md-have-substan-82d8.misc.md  20260704T201843Z-parametrize-error-path-tests-and-add-fix-a584.misc.md  20260704T202927Z-reorganize-module-robotsix-config-align-94fd.misc.md  20260705T101248Z-robotsix-config-add-triage-boilerplate-p-c590.misc.md  20260705T113001Z-triage-boilerplate-docker-503-sandbox-fa-e90a.misc.md  20260705T113001Z-triage-boilerplate-internal-only-doc-cla-5d2e.misc.md  20260705T140446Z-bug-report-and-config-issue-templates-re-eef2.misc.md  20260705T141621Z-docs-yml-permissions-deny-reusable-workf-5280.misc.md  20260705T141621Z-stale-references-to-old-project-name-rob-ead6.misc.md  20260705T230433Z-add-set-frozenset-handling-to-reveal-and-3947.misc.md  20260706T093635Z-deactivate-all-periodic-mill-workflows-k-fd79.misc.md  20260706T143435Z-robotsix-config-adopt-robotsix-modules-f-468b.misc.md  20260706T143435Z-robotsix-config-enable-core-periodic-wor-ab78.misc.md  20260706T151742Z-redundant-checkout-in-composite-setup-ac-48cc.misc.md  20260706T151742Z-stale-docs-robotsix-config-modules-yaml-a0ff.misc.md  20260708T082420Z-add-set-frozenset-handling-to-reveal-wit-ed15.misc.md  20260713T051418Z-robotsix-config-recreate-docs-robotsix-c-a782.misc.md  20260714T165300Z-robotsix-config-enable-baseline-periodic-fa11.misc.md  20260719T185310Z-robotsix-config-enable-audit-periodic-wo-365d.misc.md  20260719T185310Z-robotsix-config-enable-completeness-chec-2f5c.misc.md  20260719T185310Z-robotsix-config-enable-docstring-coverag-2c88.misc.md  20260719T185310Z-robotsix-config-enable-health-periodic-w-8bcc.misc.md  20260719T185310Z-robotsix-config-enable-module-curator-pe-244b.misc.md  20260719T185310Z-robotsix-config-enable-repo-description-ef20.misc.md  20260719T200051Z-reveal-silently-erases-tuple-type-use-ty-6b93.misc.md  (+19 more)
docs/: api.md  contributing.md  index.md  modules.yaml
docs/_core/: index.md
docs/_env/: index.md
docs/_errors/: index.md
docs/_flatten/: index.md
docs/_io/: index.md
docs/_paths/: index.md
docs/config/: index.md
docs/robotsix_config/: api.md  index.md  modules.yaml  security.md
docs/schema/: index.md
scripts/: check_schema_freshness.py
site/: 404.html  index.html  modules.yaml  sitemap.xml
site/_core/: index.html
site/_env/: index.html
site/_errors/: index.html
site/_flatten/: index.html
site/api/: index.html
site/contributing/: index.html
site/search/: search_index.json
src/robotsix_config/: __init__.py
src/robotsix_config/_errors/: __init__.py
src/robotsix_config/config/: __init__.py
src/robotsix_yaml_config/: __init__.py  _core.py
src/robotsix_yaml_config/_core/: __init__.py
src/robotsix_yaml_config/_env/: __init__.py
src/robotsix_yaml_config/_errors/: __init__.py
src/robotsix_yaml_config/_flatten/: __init__.py
src/robotsix_yaml_config/_io/: __init__.py
src/robotsix_yaml_config/_paths/: __init__.py
src/robotsix_yaml_config/schema/: __init__.py
tests/: conftest.py  test_core.py  test_properties.py
tests/_core/: test_core.py  test_filesystem_edge_cases.py  test_yaml_edge_cases.py
tests/_env/: test_env.py  test_env_nested.py  test_properties.py
tests/_errors/: test_errors.py
tests/_flatten/: test_properties.py
tests/_io/: test_io.py
tests/_paths/: test_paths.py
tests/config/: test_config.py  test_config.schema.json
tests/config/scripts/: _test_models.py  test_check_schema_freshness.py
tests/schema/: test_properties.py  test_schema.py
tests/scripts/: test_check_schema_freshness.py
