[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "robotsix-yaml-config"
version = "0.1.0"
description = "Backend-agnostic YAML configuration cascade primitives: deep-merge, layered file loading, env-var overlay, and dotted-path flattening."
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
license-files = ["LICEN[CS]E*"]
keywords = ["yaml", "configuration", "config", "deep-merge", "environment-variables", "settings"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
authors = [{ name = "Damien Robotsix" }]
dependencies = [
    "pyyaml>=6",
]

[project.urls]
Homepage = "https://github.com/damien-robotsix/robotsix-yaml-config"
Repository = "https://github.com/damien-robotsix/robotsix-yaml-config"
Issues = "https://github.com/damien-robotsix/robotsix-yaml-config/issues"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5", "pytest-xdist>=3.6", "ruff>=0.6", "mypy>=1.11", "types-PyYAML>=6", "vulture>=2.16", "hypothesis>=6", "mkdocs-material>=9", "mkdocstrings[python]>=0.25"]

[tool.hatch.build.targets.wheel]
packages = ["src/robotsix_yaml_config"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S"]

[tool.ruff.lint.per-file-ignores]
"vulture_whitelist.py" = ["B018"]
# Security (S) rules target production code; tests legitimately use
# `assert` (S101) and temp paths (S108). Mirror Bandit's
# `exclude_dirs = ["tests"]` so the S rule set stays green in CI.
"tests/**" = ["S"]

[tool.bandit]
exclude_dirs = ["tests"]

[tool.deptry.per_rule_ignores]
# Dev-only tooling (formatter/linter/type-checker/test framework + stubs +
# docs site generator) is invoked as CLI commands and not imported from src/,
# so deptry's DEP002 ("defined but not used") is expected and intentional.
DEP002 = ["pytest", "pytest-cov", "pytest-xdist", "ruff", "mypy", "types-PyYAML", "hypothesis", "mkdocs-material", "mkdocstrings", "vulture"]

[tool.deptry.package_module_name_map]
# The distribution is named "pyyaml" but imports as "yaml" — map it so
# deptry resolves the `import yaml` in src/ to the declared dependency.
pyyaml = "yaml"

[tool.mypy]
warn_unused_ignores = true
warn_redundant_casts = true
disallow_any_generics = true
no_implicit_reexport = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
