[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "robotsix-config"
version = "0.1.0"
description = "Typed configuration for the robotsix stack: one pydantic model, one JSON file, and a JSON Schema that drives type-checking and the deploy UI."
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
license-files = ["LICEN[CS]E*"]
keywords = ["configuration", "config", "pydantic", "json", "json-schema", "typed", "settings", "secrets"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
authors = [{ name = "Damien Robotsix" }]
dependencies = [
    "pydantic>=2",
]

[project.urls]
Homepage = "https://github.com/damien-robotsix/robotsix-config"
Documentation = "https://damien-robotsix.github.io/robotsix-config"
Repository = "https://github.com/damien-robotsix/robotsix-config"
Issues = "https://github.com/damien-robotsix/robotsix-config/issues"
Changelog = "https://github.com/damien-robotsix/robotsix-config/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5", "pytest-xdist>=3.6", "ruff>=0.6", "mypy>=1.11", "vulture>=2.16", "mkdocs-material>=9", "mkdocstrings[python]>=0.25"]

[tool.hatch.build.targets.wheel]
packages = ["src/robotsix_config"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["robotsix_config"]
branch = true
relative_files = true

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]
fail_under = 90  # align with CI coverage-threshold

[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S"]

[tool.ruff.lint.per-file-ignores]
# Security (S) rules target production code; tests legitimately use
# `assert` (S101) and temp paths (S108). Mirror Bandit's
# `exclude_dirs = ["tests"]` so the S rule set stays green in CI.
"tests/**" = ["S"]

[tool.bandit]
exclude_dirs = ["tests"]

[tool.deptry.per_rule_ignores]
# Dev-only tooling (formatter/linter/type-checker/test framework + docs site
# generator) is invoked as CLI commands and not imported from src/, so deptry's
# DEP002 ("defined but not used") is expected and intentional.
DEP002 = ["pytest", "pytest-cov", "pytest-xdist", "ruff", "mypy", "mkdocs-material", "mkdocstrings", "vulture"]

[tool.mypy]
warn_unused_ignores = true
warn_redundant_casts = true
disallow_any_generics = true
no_implicit_reexport = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
