[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "robotsix-config"
version = "0.1.0"
description = "Typed configuration for the robotsix stack: one pydantic model, one JSON file, and a JSON Schema that drives type-checking and the deploy UI."
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
license-files = ["LICEN[CS]E*"]
keywords = ["configuration", "config", "pydantic", "json", "json-schema", "typed", "settings", "secrets"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
authors = [{ name = "Damien Robotsix" }]
dependencies = [
    "pydantic>=2",
]

[project.urls]
Homepage = "https://github.com/damien-robotsix/robotsix-config"
Documentation = "https://damien-robotsix.github.io/robotsix-config"
Repository = "https://github.com/damien-robotsix/robotsix-config"
Issues = "https://github.com/damien-robotsix/robotsix-config/issues"
Changelog = "https://github.com/damien-robotsix/robotsix-config/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5", "pytest-xdist>=3.6", "ruff>=0.6", "mypy>=1.11", "vulture>=2.16", "mkdocs-material>=9", "mkdocstrings[python]>=0.25", "towncrier", "robotsix-modules>=0.2.0"]
docs = ["mkdocs-material>=9", "mkdocstrings[python]>=0.25"]

[tool.hatch.build.targets.wheel]
packages = ["src/robotsix_config"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["robotsix_config"]
branch = true
relative_files = true

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]
fail_under = 90  # align with CI coverage-threshold

[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
extend-select = ["D", "E", "F", "I", "UP", "B", "S"]
ignore = ["D105", "D107", "D205", "D415"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Security (S) and pydocstyle (D) rules target production code; tests
# legitimately use `assert` (S101), temp paths (S108), and test functions
# don't need Google-style docstrings. Mirror Bandit's `exclude_dirs =
# ["tests"]` so the S rule set stays green in CI.
"tests/**" = ["D", "S"]

[tool.bandit]
exclude_dirs = ["tests"]

[tool.deptry.per_rule_ignores]
# Dev-only tooling (formatter/linter/type-checker/test framework + docs site
# generator) is invoked as CLI commands and not imported from src/, so deptry's
# DEP002 ("defined but not used") is expected and intentional.
DEP002 = ["pytest", "pytest-cov", "pytest-xdist", "ruff", "mypy", "mkdocs-material", "mkdocstrings", "vulture", "towncrier", "robotsix-modules"]

[tool.mypy]
warn_unused_ignores = true
warn_redundant_casts = true
disallow_any_generics = true
no_implicit_reexport = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.towncrier]
package = "robotsix_config"
package_dir = "src"
filename = "CHANGELOG.md"
directory = "changelog.d/"
title_format = "{version} ({project_date})"
issue_format = "#{issue}"

[[tool.towncrier.type]]
directory = "feature"
name = "Features"
showcontent = true

[[tool.towncrier.type]]
directory = "bugfix"
name = "Bug Fixes"
showcontent = true

[[tool.towncrier.type]]
directory = "doc"
name = "Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "removal"
name = "Deprecations and Removals"
showcontent = true

[[tool.towncrier.type]]
directory = "misc"
name = "Miscellaneous"
showcontent = false
